name:                currencies
version:             0.1.0.0
synopsis:            Отримання курсів валют з bank.gov.ua та представлення їх у вигляді JSON'у
license:             Apache-2.0
license-file:        LICENSE
author:              Sergey Gerasimov
maintainer:          mail@grsmv.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tagsoup-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       HandsomeSoup == 0.3.2,
                       aeson == 0.8.0.0,
                       scotty == 0.8.2,
                       hxt == 9.3.1.4,
                       transformers,
                       time,
                       old-locale
  default-language:    Haskell2010
